--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,15 @@
                         <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
                     </li>
                 </ul>
+                <div class="collapse navbar-collapse justify-content-end">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
