--- a/app/templates/teacher/dashboard.html
+++ b/app/templates/teacher/dashboard.html
@@ -144,6 +144,11 @@
                             <i class="fas fa-user-plus me-2"></i>Add Student
                         </a>
                     </div>
+                    <div class="col-md-3 mb-3">
+                        <a href="{{ url_for('teacher.import_students') }}" class="btn btn-secondary btn-block">
+                            <i class="fas fa-file-import me-2"></i>Import Students (CSV)
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
